[gd_scene load_steps=13 format=3 uid="uid://cpdrdc32otbx6"]

[ext_resource type="PackedScene" uid="uid://cbglp50k7xqre" path="res://Instances_and_Scenes/player character/player.tscn" id="1_523ka"]
[ext_resource type="Script" path="res://main.gd" id="1_lypa7"]
[ext_resource type="Texture2D" uid="uid://dx8vnwkyrxmyl" path="res://Assets/env/grass/grass Spritesheet.png" id="1_qjgau"]
[ext_resource type="PackedScene" uid="uid://bgriuffvjnycc" path="res://Instances_and_Scenes/mobs/slime/Slime_Mob.tscn" id="2_xeio1"]
[ext_resource type="PackedScene" uid="uid://c718sivacfbog" path="res://shade_mob.tscn" id="3_tghlp"]
[ext_resource type="PackedScene" uid="uid://btn8dbfmbt7sw" path="res://Instances_and_Scenes/HUD/hud.tscn" id="5_b04qg"]

[sub_resource type="Curve2D" id="Curve2D_sefok"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 429, 48.7655, 0, 0, 0, 0, 429, 254.775)
}
point_count = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_loclx"]
texture = ExtResource("1_qjgau")
0:0/0 = 0
2:0/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_uujm0"]
sources/0 = SubResource("TileSetAtlasSource_loclx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h8xo"]
size = Vector2(1136, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yq8h"]
size = Vector2(16, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c85a"]
size = Vector2(16, 304)

[node name="Main" type="Node"]
script = ExtResource("1_lypa7")
slime_scene = ExtResource("2_xeio1")
shade_scene = ExtResource("3_tghlp")

[node name="Player" parent="." instance=ExtResource("1_523ka")]
position = Vector2(370, 193)

[node name="spawnpoints" type="Node" parent="."]

[node name="1" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(736, -55)

[node name="2" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-26, -22)

[node name="3" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(492, -31)

[node name="4" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-223, -33)

[node name="5" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-133, -47)

[node name="6" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(420, -28)

[node name="7" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(551, -57)

[node name="8" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-270, -21)

[node name="9" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(672, -31)

[node name="10" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(603, -28)

[node name="11" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-175, -20)

[node name="12" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(-88, -20)

[node name="Player_spawnpoint" type="StaticBody2D" parent="spawnpoints"]
position = Vector2(196, 74)

[node name="shade_spawns" type="Path2D" parent="spawnpoints"]
position = Vector2(51, -49)
scale = Vector2(1, 1.00481)
curve = SubResource("Curve2D_sefok")

[node name="shade_path" type="PathFollow2D" parent="spawnpoints/shade_spawns"]
position = Vector2(429, 48.7655)
rotation = 1.5708

[node name="World" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="TileMap" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_uujm0")
format = 2
layer_0/tile_data = PackedInt32Array(851971, 131072, 0, 851975, 131072, 0, 851976, 131072, 0, 851977, 0, 2, 851978, 0, 2, 851979, 131072, 0, 851980, 0, 0, 851981, 0, 2, 851982, 0, 2, 851983, 0, 2, 851984, 0, 0, 851985, 131072, 0, 851986, 0, 2, 851987, 0, 0, 851988, 0, 2, 851989, 131072, 0, 851990, 0, 0, 851991, 131072, 0, 851972, 0, 2, 851973, 131072, 0, 851974, 131072, 0, 851970, 0, 0, 851969, 131072, 0, 851968, 0, 2, 917503, 131072, 0, 917502, 131072, 0, 917501, 0, 2, 917500, 0, 0, 917499, 0, 2, 917498, 131072, 0, 917491, 0, 0, 917490, 0, 2, 917489, 0, 2, 917492, 131072, 0, 917493, 131072, 0, 917494, 131072, 0, 917496, 0, 2, 917497, 0, 2, 917495, 0, 0, 917488, 0, 2, 917487, 0, 0, 917486, 0, 2, 917485, 131072, 0, 917484, 0, 2, 917483, 0, 0, 851992, 0, 0, 851993, 131072, 0, 851994, 0, 2, 851995, 0, 0, 851996, 0, 2, 851997, 0, 0, 851998, 131072, 0, 851999, 131072, 0, 852000, 131072, 0, 852001, 131072, 0, 852002, 0, 2, 852003, 131072, 0, 852004, 0, 0, 852005, 0, 2, 852006, 131072, 0, 852007, 0, 0, 852008, 131072, 0, 852009, 0, 0, 852010, 0, 2, 852011, 0, 0, 852012, 0, 2, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 786481, 0, 2, 720945, 0, 0, 655409, 0, 2, 589873, 131072, 0, 524337, 0, 2, 458801, 0, 0, 393265, 131072, 0, 327729, 131072, 0, 262193, 131072, 0, 196657, 0, 0, 131121, 0, 2, 65585, 131072, 0, 49, 0, 0, -65487, 0, 0, -131023, 0, 0, -196559, 0, 2, -262095, 0, 2, -327631, 0, 0, -393167, 0, 2, 851947, 0, 0, 786411, 0, 2, 720875, 0, 0, 655339, 0, 0, 589803, 131072, 0, 524267, 0, 0, 458731, 0, 0, 393195, 0, 0, 327659, 131072, 0, 262123, 0, 0, 196587, 0, 0, 131051, 0, 0, 65515, 0, 2, -21, 131072, 0, -65557, 0, 2, -131093, 0, 0, -196629, 0, 0, -262165, 131072, 0, -327701, 0, 0, -393237, 131072, 0)

[node name="floor-CollisionShape2D" type="CollisionShape2D" parent="World"]
position = Vector2(232, 216)
shape = SubResource("RectangleShape2D_4h8xo")

[node name="Lwall-CollisionShape2D" type="CollisionShape2D" parent="World"]
position = Vector2(-328, 48)
shape = SubResource("RectangleShape2D_4yq8h")

[node name="Rwall-CollisionShape2D" type="CollisionShape2D" parent="World"]
position = Vector2(792, 56)
shape = SubResource("RectangleShape2D_7c85a")

[node name="mob timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Debug_Cam" type="Camera2D" parent="."]
position = Vector2(188, -41)
enabled = false
zoom = Vector2(0.3, 0.3)

[node name="HUD" parent="." instance=ExtResource("5_b04qg")]

[connection signal="p_ammo" from="." to="HUD" method="_on_main_p_ammo"]
[connection signal="p_health" from="." to="HUD" method="_on_main_p_health"]
[connection signal="fire" from="Player" to="." method="_on_player_fire"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="mob timer" to="." method="_on_mob_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
